client/main.css
* {
    --bg: #222;
    --bg-l: #2a2a2a;
    --bg-ll: #333;
    --bg-lll: #444;

    --prim: #b42a2a;

    --hint-green: #538d4e;
    --hint-yellow: #b59f3b;
    --hint-red: #b42a2a;

    --sabotage-clickable: #b64343;

    --txt: #fff;
    --txt-d: #ccc;

    box-sizing: border-box;
}

body {
    margin: 0;
    color: var(--txt);
}

body, .panel {
    background-color: var(--bg);
}

.panel {
    position: absolute;
    width: 100vw;
    height: 100vh;
    left: 0;
    top: 0;

    z-index: -10;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.panel.hidden {
    display: none;
}


*::selection {
    background-color: var(--prim);
}

button, input {
    font-family: cascadia;
    background-color: var(--bg-ll);
    border: 0;
    color: white;
    padding: 6px 15px;
    font-size: 1.3rem;
    cursor: pointer;

    transition: 200ms;
}

*:focus-visible {
    outline: 4px solid var(--prim);
    border-radius: 3px;
    border: none;
}

button:hover {
    transform: scale(1.1);
}

button.connecting {
    opacity: 0.5;
    color: transparent;
    position: relative;
}

button.connecting::after {
    content: "Connecting...";
    color: var(--txt-d);
    display: block;
    position: absolute;
    width: 100%;
    left: 0;
    top: 50%;
    transform: translate(0, -50%);
    text-align: center;
    line-height: 100%;
}


.sep-text {
    position: relative;
    display: block;
    margin: 20px;
    color: var(--txt-d);
    text-align: center;
    background-color: var(--bg);
    padding: 0 10px;
}

.sep-text::before {
    content: " ";
    display: block;
    width: 400px;
    height: 2px;
    background-color: var(--txt-d);
    position: absolute;
    top: calc(50% - 1px);
    left: calc(-200px + 50%);
    z-index: -5;
}

.flex-col {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.flex-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.text-margins {
    margin-left: 1em;
    margin-right: 1em;
}

#room-code {
    margin: 10px;
    font-size: 4rem;
    font-family: monospace;
}

.room-code-clipboard-hint {
    color: var(--txt-d);
    font-style: italic;
}

.waiting-player-hint {
    color: var(--txt-d);
    margin-top: 30px;
    font-size: 1.5rem;
}

.room-join-error {
    color: #e24e4e;
    margin-top: 40px;
}

.room-join-error.hidden {
    display: none;
}

#game-hint {
    font-size: 1.5rem;
    text-align: center;
}

#game-hint .hidden {
    display: none;
}

.logo {
    display: flex;
    flex-direction: row;
    gap: 10px;
    align-items: center;
    justify-content: center;
    margin-bottom: 100px;
}

.server-url-panel {
    position: absolute;
    right: 10px;
    top: 10px;
}

.server-url-panel input {
    padding: 4px 10px;
    font-size: 1rem;
    margin-left: 5px;
}

/* WORD GRID */

.word-grid {
    display: grid;
    grid-template-columns: repeat(5, auto);
    gap: 5px;
    margin: 50px;

    transition: 200ms;
}

.word-grid.inactive {
    opacity: 0.6;
}

.word-grid-cell-container {
    width: 70%;
    height: 70px;
}

.word-grid-cell {
    width: 70px;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.word-grid-cell.empty {
    border: 2px solid var(--bg-ll);
}

.word-grid-cell.typed-unchecked {
    border: 2px solid var(--bg-lll);
}

.word-grid-cell.hint-green {
    background-color: var(--hint-green);
}

.word-grid-cell.hint-yellow {
    background-color: var(--hint-yellow);
}

.word-grid-cell.hint-red {
    background-color: var(--hint-red);
}

.word-grid-cell.hint-none {
    background-color: var(--bg-ll);
}

.word-grid-cell.sabotage-target {
    border-color: var(--hint-red);
    transition: 150ms;
}
.word-grid-cell.sabotage-target:hover {
    border-width: 6px;
}

.word-grid-label {
    font-size: 2rem;
    pointer-events: none;
    user-select: none;
}

.word-grid-cell.animate-type {
    animation: word-grid-type 100ms ease 0s 1 forwards;
}
.word-grid-cell.animate-hint {
    animation: word-grid-hint 200ms ease 0s 1 forwards;
}

@keyframes word-grid-type {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.2);
    }
    100% {
        transform: scale(1);
    }
}

@keyframes word-grid-hint {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(0, 1);
    }
    100% {
        transform: scale(1);
    }
}

/* KEYBOARD */

#keyboard {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: stretch;
    gap: 7px;
    width: 550px;
}

.keyboard-line {
    display: flex;
    flex-direction: row;
    align-items: stretch;
    justify-content: stretch;
    height: 60px;
    gap: 7px;
}

.keyboard-letter, .keyboard-enter, .keyboard-backspace {
    background-color: var(--bg-ll);
    width: 1px;
    flex-grow: 1;

    display: flex;
    align-items: center;
    justify-content: center;
}

.keyboard-enter, .keyboard-backspace {
    flex-grow: 1.5;
}

.keyboard-void {
    width: 1px;
    flex-grow: 0.3;
}

.keyboard-letter > span {
    font-size: 1.6rem;
}

.keyboard-enter > span{
    font-size: 1.2rem;
}

.keyboard-backspace > span {
    font-size: 0.8rem;
}

.keyboard-letter:hover, .keyboard-enter:hover, .keyboard-backspace:hover {
    filter: brightness(1.2);
}

.keyboard-letter > span, .keyboard-enter > span, .keyboard-backspace > span {
    pointer-events: none;
    user-select: none;
}

/* TOASTS */

#toasts-container {
    position: absolute;
    width: 100vw;

    display: flex;
    justify-content: center;
    align-items: center;

    transition: 400ms ease-out;
}

#toasts-container {
    top: -100px;
    transform: scale(0.5);
}

#toasts-container.visible {
    top: 20px;
    transform: scale(1);
}

.toast {
    display: block;
    background-color: var(--bg-lll);
    padding: 7px 14px;
}

.toast.error {
    background-color: var(--hint-red);
}

.toast.hidden {
    display: none;
}

/* RESPONSIVENESS */

@media (max-width: 1000px) {
    #grids-container {
        width: fit-content;
        padding: 0 calc(50vw - 20px - 2.5*70px - 20px);
    }

    #grids-scroll-area {
        width: 100vw;
        overflow-x: auto;
    }

    #left-grid {
        margin: 50px 20px;
    }

    #right-grid {
        margin: 50px 20px;
    }

    #keyboard {
        width: 95vw;
        margin-bottom: 30px;
        gap: 4px;
    }

    .keyboard-line {
        height: 75px;
        gap: 4px;
    }
}

@media (max-width: 600px) {
    #join-room-row {
        flex-direction: column;
        gap: 10px;
    }

    .logo .word-grid-cell-container, .logo .word-grid-cell {
        width: 60px;
        height: 60px;
    }
}

